k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neurashield
  labels:
    name: neurashield
    app: neurashield
